# internship

./: .gitignore  README.md
backend/: .env  ai_processor.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  scraping.py  similarity.py  sqlite.db
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/scripts/: dev.js
frontend/src/: App.css  App.jsx  ArticleDetail.jsx  ArticleList.jsx  ArticleListItem.jsx  data.js  index.css  main.jsx  styles.css
frontend/src/api/: articles.js
frontend/src/components/: AnimatedBackground.jsx  FeaturesMarquee.jsx  Logo.jsx  MetricsSection.jsx  Navbar.jsx
frontend/src/pages/: ArticleDetailPage.jsx  ArticleListPage.jsx  HomePage.jsx  NewArticleForm.jsx
frontend/src/scripts/: dev.js
